k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nexus
  namespace: default
  labels:
    app: nexus
spec:
  type: ClusterIP
  selector:
    app: nexus
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
